# gsd-bridge

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codex-bridge-template.md  gsd_to_superpowers.py  pyproject.toml
.claude/commands/bridge/: blocked-json.md  blocked.md  execute-until.md  execute-wave.md  execute.md  export-dry.md  export.md  reconcile.md  resume.md  status-json.md  status.md  unlock.md  validate.md
.github/workflows/: gsd-bridge.yml
gsd_bridge/: __init__.py  __main__.py  cli.py  codex_adapter.py  converter.py  exceptions.py  log.py  manifest.py  parser.py  plan_id.py  reconcile.py  schemas.py  state.py  verify.py
tests/: test_contract_surface.py  test_gsd_bridge.py  test_verify_converter.py
tests/fixtures/: README.md
