[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsd-bridge"
version = "3.0.0"
description = "Bridge between GSD plans and Codex execution state"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Jomar Vazquez"},
]
keywords = ["gsd", "codex", "planning", "automation", "bridge"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/jomarvazquez-wq/gsd-bridge"
Repository = "https://github.com/jomarvazquez-wq/gsd-bridge"
Issues = "https://github.com/jomarvazquez-wq/gsd-bridge/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "ruff>=0.4",
]

[project.scripts]
gsd-bridge = "gsd_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["gsd_bridge*"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
